--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,15 @@ jobs:
           - platform: ubuntu-latest
             bootstrap_script: ./script/bootstrap.sh
             bali_args: ./bali -p
+            bali_suffix: tar.gz
           - platform: macos-latest
             bootstrap_script: ./script/bootstrap.sh
             bali_args: ./bali -p
+            bali_suffix: tar.gz
           - platform: windows-latest
             bootstrap_script: script/bootstrap.bat
             bali_args: ./bali.exe -z
+            bali_suffix: zip
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
@@ -39,5 +42,12 @@ jobs:
           go-version: '1.14.x'
       - name: Bootstrap Bali
         run: ${{ matrix.bootstrap_script }}
-      - name: Build Bali
-        run: ${{ matrix.bali_args }}
+      - name: Upload release
+        uses: svenstaro/upload-release-action@v1-release
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          file_glob: true
+          file: bali-*.${{ matrix.bali_suffix }}
+          tag: ${{ github.ref }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          overwrite: true
