--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 1
-      - name: Lint Code Base
-        uses: docker://github/super-linter:v3
+      - name: Super-Linter
+        uses: github/super-linter@v3.3.0
         env:
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_GO: true
