--- a/bali.toml
+++ b/bali.toml
@@ -1,9 +1,10 @@
 # https://toml.io/en/
 name = "bali"
-version = "1.2.9"
+version = "1.2.10"
 dirs = [
     "cmd/bali", # dirs
-]
+] 
+destination = "Bali - Minimalist Golang build and packaging tool"
 
 [[files]]
 path = "LICENSE"
