--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,27 +1,27 @@
 name: Linter
-on: 
+on:
   push:
     paths-ignore:
       # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions
       - "docs/**"
-      - '**.md'
-      - '**.txt'
-      - 'LICENSE'
+      - "**.md"
+      - "**.txt"
+      - "LICENSE"
   pull_request:
     paths-ignore:
       - "docs/**"
-      - '**.md'
-      - '**.txt'
-      - 'LICENSE'
+      - "**.md"
+      - "**.txt"
+      - "LICENSE"
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 1
       - name: Super-Linter
-        uses: github/super-linter@v3.16.1
+        uses: github/super-linter@v4.9.2
         env:
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_GO: true
