--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Setup go
         uses: actions/setup-go@v3
         with:
-          go-version: "1.19.x"
+          go-version: 'stable'
       - name: Bootstrap Bali
         run: ${{ matrix.bootstrap_script }}
       - name: Upload release
