--- a/bali.toml
+++ b/bali.toml
@@ -5,7 +5,7 @@ dirs = [
     "cmd/bali",     # dirs
     "cmd/peassets",
 ]
-destination = "Bali - Minimalist Golang build and packaging tool"
+description = "Bali - Minimalist Golang build and packaging tool"
 
 [[files]]
 path = "LICENSE"
