--- a/cmd/peassets/winres.toml
+++ b/cmd/peassets/winres.toml
@@ -22,3 +22,41 @@ manifest = """data:<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
   </asmv3:application>
 </assembly>
 """
+
+[FixedFileInfo]
+FileFlagsMask = "3f"
+FileFlags = "00"
+FileOS = "40004"
+FileType = "01"
+FileSubType = "00"
+
+[FixedFileInfo.FileVersion]
+Major = 0
+Minor = 0
+Patch = 0
+Build = 0
+
+[FixedFileInfo.ProductVersion]
+Major = 0
+Minor = 0
+Patch = 0
+Build = 0
+
+[StringFileInfo]
+Comments = ""
+CompanyName = "Bali Team"
+FileDescription = "Bali - Minimalist Golang build and packaging tool"
+FileVersion = ""
+InternalName = "peassets.exe"
+LegalCopyright = "Copyright © 2024. Bali contributors"
+LegalTrademarks = ""
+OriginalFilename = "peassets.exe"
+PrivateBuild = ""
+ProductName = "Bali"
+ProductVersion = ""
+SpecialBuild = ""
+
+[VarFileInfo]
+[VarFileInfo.Translation]
+LangID = "0409"
+CharsetID = "04B0"
