--- a/cmd/bali/crate.toml
+++ b/cmd/bali/crate.toml
@@ -4,5 +4,5 @@ destination = "bin"
 version = "3.0.0"
 goflags = [
     "-ldflags",
-    "-X 'main.VERSION=$BUILD_VERSION' -X 'main.BUILDTIME=$BUILD_TIME' -X 'main.BUILDBRANCH=$BUILD_BRANCH' -X 'main.BUILDCOMMIT=$BUILD_COMMIT'  -X 'main.BUILDREFNAME=$BUILD_REFNAME' -X 'main.GOVERSION=$BUILD_GOVERSION'",
+    "-X 'main.VERSION=$BUILD_VERSION' -X 'main.BUILD_TIME=$BUILD_TIME' -X 'main.BUILD_BRANCH=$BUILD_BRANCH' -X 'main.BUILD_COMMIT=$BUILD_COMMIT'  -X 'main.BUILD_REFNAME=$BUILD_REFNAME' -X 'main.BUILD_GOVERSION=$BUILD_GOVERSION'",
 ]
