--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,11 +17,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 1
       - name: Super-Linter
-        uses: github/super-linter@v4.9.2
+        uses: super-linter/super-linter@v7.1.0
         env:
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_GO: true
