--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Super-Linter
         uses: super-linter/super-linter@v7.1.0
         env:
+          # To report GitHub Actions status checks
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_GO: true
           DEFAULT_BRANCH: master
